1.0
    1.0 will be a complete api overhaul


0.12.1
    * typing
    * added `METADATA_PARSER_FUTURE` environment variable
        `export METADATA_PARSER_FUTURE=1` to enable

0.12.0
    * drop python 2.7
    * initial typing support

0.11.0 | UNRELEASED

  * BREAKING CHANGES
    Due to the following breaking changes, the version was bumped to 0.11.0
    * `MetadataParser.fetch_url` now returns a third item.
      
  * COMPATIBLE CHANGES
    The following changes are backwards compatible to the 0.10.x releases
    * a test-suite for an application leveraging `metadata_parser` experienced
      some issues due to changes in the Responses package used to mock tests.
      to better faciliate against that, a new change were made:

      MetadataParser now has 2 subclassable attributes for items that should
      or should not be parsed:

        +    _content_types_parse = ("text/html",)
        +    _content_types_noparse = ("application/json",)

      Previously, these values were hardcoded into the logic.     
    * some error log messages were reformatted for clarity
    * some error log messages were incorrectly reformatted by black
    * added logging for NotParseable situations involving redirects
    * added a `.response` attribute to NotParsable errors to help debug
      redirects
    * added a new ResponseHistory class to track redirects
      * it is computed and returned during `MetadataParser.fetch_url`
      * `MetadataParser.parse(` optionally accepts it, and will stash
        it into ParsedResult
      * `ParsedResult` 
        * ResponseHistory is not stashed in the metadata stash, but a new namespace
        * `.response_history` will either be `ResponseHistory` or None
    * improving docstrings
    * added `decode_html` helper
    * extended MetadataParser to allow registration of a defcault_encoder for results
    * style cleanup

0.10.5
    packaging fixes
    migrated 'types.txt' out of distribution; it remains in github source