@@ -22,6 +22,7 @@ jobs:
           - "3.9"
           - "3.10"
           - "3.11"
+          - "3.12"
         include:
           # ubuntu-latest[22.04] does not have: py36
           - os: "ubuntu-20.04"
