@@ -1,2 +1,15 @@
+[mypy]
+check_untyped_defs = True
+exclude = (?x)(
+      ^setup\.py$
+    | ^workspace-demos\/
+    )
+
+[mypy-httpbin.*]
+ignore_missing_imports = True
+
+[mypy-pytest_httpbin.*]
+ignore_missing_imports = True
+
 [mypy-requests_toolbelt.*]
 ignore_missing_imports = True
