@@ -8,6 +8,6 @@ per-file-ignores =
 	src/metadata_parser/__init__.py: E501,I202
 	tests/*: E501
 	tests/_compat.py: F401
-exclude = .eggs/*, .pytest_cache/*, .tox/*, build/*, dist/*
+exclude = .eggs/*, .pytest_cache/*, .tox/*, build/*, dist/*, workspace-demos/*
 application_import_names = metadata_parser
 import_order_style = appnexus
