@@ -2,7 +2,7 @@
 envlist =
 	lint,
 	mypy,
-	py36,py37,py38,py39,py310,py311
+	py36,py37,py38,py39,py310,py311,py312
 
 [testenv]
 commands =
